@@ -1,5 +1,9 @@
 2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* ListBox.cs, ListBoxItem.cs: Added.
+
+2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* Label.cs: Cleaned the code a little.
 
 2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>
